--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="ideros">
+<html lang="en" ng-app="winnin">
 <head>
   <meta charset="UTF-8">
   <title>Desafio Winnin</title>
